# SSS-Startup-Survival-Simulator

./: .gitignore  Dockerfile  HACKATHON_ARCHITECTURE.md  README.md  SUBMISSION_CHECKLIST.md  USER_MANUAL.md  api.py  baseline.py  demo_runner.ps1  env.py  eval_comparison.py  generate_artifacts.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements-training.txt  requirements.txt  sss_demo.py  sss_hackathon_env.py  sss_reward_verifier.py  sss_stress_debug.py  sss_training.py  sss_visualize_demo.py  tasks.py  test_smoke.py  test_sss_hackathon.py  train_trl.ipynb  train_trl.py  validate_submission.sh
artifacts/: README.md  demo_results.json  evaluation_summary.json  trained_policy_qtable.json  training_log_history.json
server/: app.py
