[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "startup-survival-env"
version = "1.0.0"
description = "Real-world startup operations environment with OpenEnv-style step/reset/state APIs."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "openai",
    "openenv-core",
    "numpy",
    "pandas",
    "matplotlib",
    "datasets",
    "torch",
    "transformers",
    "peft",
    "trl",
    "bitsandbytes",
    "accelerate"
]

[project.scripts]
startup-survival-env = "api:app"

[project.optional-dependencies]
dev = ["pytest"]
